# spry

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  package.json  schema.json  store  tsconfig.base.json  tsconfig.json  turbo.json
abi/: abi.h  package.json  schema.ts  tree.example.json
cmake/: fetch.cmake  yyjson.cmake
cmake/patches/: yyjson-freestanding.patch
docs/: protocol.md
example/: CMakeLists.txt
example/native/: CMakeLists.txt  handlers.c  handlers.h  main.c  rpc_smoke.c  smoke.c
example/native/app/: app.c  app.h
example/native/db/: db.c  db.h  sql.h
example/native/handlers/: edit_cell.c  exec.c  open_table.c  save_cell.c  tables.c
example/ui/: tree.json
example/web/: index.html  main.ts  package.json  server.ts  server.tsx
include/spry/: abi.h  ast.h  core.h  gen.h  gtk.h  host.h  rpc.h  ui.h
include/spry/backend/: backend.h  gtk.h  stub.h
src/: CMakeLists.txt  package.json
src/abi/: abi.gen.ts  abi.h  endpoints.enums.gen.h  endpoints.enums.gen.ts  endpoints.gen.h  endpoints.jtd.json  fault.enums.gen.h  fault.enums.gen.ts  fault.gen.h  fault.jtd.json  jsx.gen.ts  schema.ts  ui.builders.gen.h  ui.enums.gen.h  ui.enums.gen.ts  ui.gen.h  ui.gen.ts  ui.jtd.json
src/app/: gtk_app.c
src/ast/: ast.c
src/backend/: backend.h  backend.ts
src/backend/gtk/: gtk_backend.c  gtk_backend.h
src/backend/stub/: stub_backend.c
src/backend/web/: dom-backend.ts
src/cli/: main.c
src/client/: index.html  main.ts
src/core/: core.c  sp.c  ui.c
src/host/native/: wasm_host.c  wasm_host.h
src/host/web/: host.ts  wasi-shim.js
src/jsx/: jsx-dev-runtime.ts  jsx-runtime.ts
src/native-host/: backend.h  stub_backend.c  stub_backend.h  wasm_host.c  wasm_host.h
src/rpc/: rpc.c
src/runtime/: json.h  runtime.c  wasm_shims.c
src/runtime/wasm_libc/: stdio.h  stdlib.h  string.h
src/server/: server.ts  service.ts
src/service/: service.c
src/ui/: ui.ts
src/web-app/: package.json  server.ts
src/web-host/: backend.ts  dom-backend.ts  host.ts  main.ts  package.json  tsconfig.json
test/: CMakeLists.txt  ast_test.c  runtime_harness.c  test.h  yyjson_probe.c  yyjson_smoke.c
test/ast/: array.c  main.c  number.c  object.c  scalar.c  test.h  union.c  values.c
test/ast/json/: array.bad_elem.json  array.deep.json  array.ok.json  number.fractional.json  number.not_num.json  number.ok.json  number.over.json  number.under.json  object.missing.json  object.ok.json  object.unknown.json  object.wrong_type.json  scalar.bad_enum.json  scalar.bad_int.json  scalar.enum_type.json  scalar.int_range.json  scalar.ok.json  union.bad_kind.json  union.extra_key.json  union.kind_type.json  union.multi.json  union.nested_key.json  union.no_kind.json  union.no_props.json  union.tree.json  values.bad_elem.json  values.not_object.json  values.ok.json
test/ui/: conformance.tsx  main.c
test/wip/: rpc_smoke.c  smoke.c
tools/: ast-test.sh  build.ts  bundle-web.ts  embed-wasm.ts  gen-abi.ts  gen-ast.ts  gen-compile-commands.ts  gen-types.ts  gen-zod.ts  package.json  run-yyjson-wasm.ts  screenshot-pid.sh  smoke-runtime.ts  ui-config.ts
